   This replaces 'multiprocess', 'cluster' and 'remote'.

 o It's now possible to set up parallel future workers when starting R
   using command-line option '--parallel=<workers>' or short '-p <workers>'
   where workers can be an integer specifying the number of parallel futures
   on the current machines or a comma- or space separated vector of machine
   names, e.g. --parallel=4 and --parallel=local1,remote2.server.org.


DEPRECATED:

##  o 'eager' futures are deprecated.  Use 'sequential' instead.

##  o 'lazy' futures are deprecated.  Instead, use f <- future(..., lazy = TRUE)
##    or v %<-% { ... } %lazy% TRUE instead.


Version: 1.2.0-9000 [2017-01-16]

INSTRUCTIONS:

 o To install this develop(ers) version of the future package, do:
 
      source('http://callr.org/install#HenrikBengtsson/future@develop')


SIGNIFICANT CHANGES:

 o Where applicable, workers are now initiated when calling plan(), e.g.
   plan(cluster) will set up workers on all cluster nodes.  Previously,
   this only happened when the first future was created.

NEW FEATURES:

 o Added support for controlling whether a future is resolved eagerly
   or lazily when creating the future, e.g. future(..., lazy = TRUE)
   futureAssign(..., lazy = TRUE), and x %<-% { ... } %lazy% TRUE.

 o future(), futureAssign() and futureCall() gained argument 'seed',
   which specifies a L'Ecuyer-CMRG random seed to be used by the future.
   The seed for future assignment can be specified via %seed%.
   
 o futureAssign() now passes all additional arguments to future().

 o Added future_lapply() which supports load balancing ("chunking")
   and perfect reproducibility (regardless of type of load balancing
   and how futures are resolved) via initial random seed.
 
 o Added availableWorkers().  By default it returns localhost workers
   according to availableCores().  In addition, it detects common
   HPC allocations given in environment variables set by the HPC
   scheduler.
   