@@ -16,29 +16,29 @@ args <- parseCmdArgs()
 str(args)
 stopifnot(args$p == 1L)
 
-options(future.plan=NULL, future.cmdargs=c(sprintf("--parallel=%d", maxCores)))
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=c(sprintf("--parallel=%d", maxCores)))
 args <- parseCmdArgs()
 str(args)
 stopifnot(args$p == maxCores)
 
-options(future.plan=NULL, future.cmdargs=c("-p", 1L, sprintf("--parallel=%d", maxCores)))
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=c("-p", 1L, sprintf("--parallel=%d", maxCores)))
 args <- parseCmdArgs()
 str(args)
 stopifnot(args$p == maxCores)
 
-options(future.plan=NULL, future.cmdargs=c("-p", 0L))
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=c("-p", 0L))
 args <- parseCmdArgs()
 stopifnot(is.null(args$p))
 res <- tryCatch(parseCmdArgs(), warning=function(w) w)
 stopifnot(inherits(res, "warning"))
 
-options(future.plan=NULL, future.cmdargs=c("-p", .Machine$integer.max))
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=c("-p", .Machine$integer.max))
 args <- parseCmdArgs()
 stopifnot(is.null(args$p))
 res <- tryCatch(parseCmdArgs(), warning=function(w) w)
 stopifnot(inherits(res, "warning"))
 
-options(future.plan=NULL, future.cmdargs=NULL)
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=NULL)
 
 message("*** parseCmdArgs() ... DONE")
 
@@ -49,38 +49,42 @@ plan("default")
 pkgname <- "future"
 
 message("- .onLoad() w/out command-line options ...")
-options(future.plan=NULL, future.cmdargs=NULL)
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=NULL)
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
+message("nbrOfWorkers(): ", nbrOfWorkers())
 stopifnot(all(class(strategy) == class(strategy0)))
 plan("default")
 message("- .onLoad() w/out command-line options ... DONE")
 
 message("- .onLoad() w/ -p 1 ...")
-options(future.plan=NULL, future.cmdargs=c("-p", 1))
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=c("-p", 1))
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
+message("nbrOfWorkers(): ", nbrOfWorkers())
 stopifnot(inherits(strategy, "sequential"))
 plan("default")
 message("- .onLoad() w/ -p 1 ... DONE")
 
 message("- .onLoad() w/ --parallel=1 ...")
 plan("default")
-options(future.plan=NULL, future.cmdargs="-parallel=1")
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs="-parallel=1")
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
+message("nbrOfWorkers(): ", nbrOfWorkers())
 stopifnot(inherits(strategy, "sequential"))
 plan("default")
 message("- .onLoad() w/ --parallel=1 ... DONE")
 
 message("- .onLoad() w/ -p 2 ...")
-options(future.plan=NULL, future.cmdargs=c("-p", 2))
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=c("-p", 2))
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
+message("nbrOfWorkers(): ", nbrOfWorkers())
 if (maxCores >= 2) {
   stopifnot(inherits(strategy, "multiprocess"))
 } else {
@@ -90,86 +94,96 @@ plan("default")
 message("- .onLoad() w/ -p 2 ... DONE")
 
 message("- .onLoad() w/ -p 0 ...")
-options(future.plan=NULL, future.cmdargs=c("-p", 0))
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=c("-p", 0))
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
+message("nbrOfWorkers(): ", nbrOfWorkers())
 stopifnot(all(class(strategy) == class(strategy0)))
 plan("default")
 message("- .onLoad() w/ -p 0 ... DONE")
 
 message("- .onLoad() w/ -p -1 ...")
-options(future.plan=NULL, future.cmdargs=c("-p", -1))
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=c("-p", -1))
+nbrOfCores <- availableCores()
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
-stopifnot(all(class(strategy) == class(strategy0)))
+print(nbrOfWorkers())
+stopifnot(nbrOfWorkers() == nbrOfCores - 1L)
 plan("default")
 message("- .onLoad() w/ -p -1 ... DONE")
 
-message("- .onLoad() w/ -p foo ...")
-options(future.plan=NULL, future.cmdargs=c("-p", "foo"))
+message("- .onLoad() w/ -p -0 ...")
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=c("-p", "-0"))
+nbrOfCores <- availableCores()
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
-stopifnot(all(class(strategy) == class(strategy0)))
+print(nbrOfWorkers())
+stopifnot(nbrOfWorkers() == nbrOfCores)
 plan("default")
-message("- .onLoad() w/ -p foo ... DONE")
+message("- .onLoad() w/ -p -0 ... DONE")
 
 message("- .onLoad() w/ R_FUTURE_PLAN='multisession' ...")
 Sys.setenv(R_FUTURE_PLAN="multisession")
-options(future.plan=NULL, future.cmdargs=NULL)
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=NULL)
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
+print(nbrOfWorkers())
 stopifnot(inherits(strategy, "multisession"))
 plan("default")
 Sys.setenv(R_FUTURE_PLAN="")
 message("- .onLoad() w/ R_FUTURE_PLAN='multisession' ... DONE")
 
 message("- .onLoad() w/ future.plan='multisession' ...")
-options(future.plan=NULL, future.plan='multisession', future.cmdargs=NULL)
+options(mc.cores = NULL, future.plan=NULL, future.plan='multisession', future.cmdargs=NULL)
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
+print(nbrOfWorkers())
 stopifnot(inherits(strategy, "multisession"))
 plan("default")
 message("- .onLoad() w/ future.plan='multisession' ... DONE")
 
 message("- .onLoad() w/ R_FUTURE_PLAN='multisession' & -p 1 ...")
 Sys.setenv(R_FUTURE_PLAN="multisession")
-options(future.plan=NULL, future.cmdargs=c("-p", 1))
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=c("-p", 1))
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
+print(nbrOfWorkers())
 stopifnot(inherits(strategy, "multisession"))
 plan("default")
 Sys.setenv(R_FUTURE_PLAN="")
 message("- .onLoad() w/ R_FUTURE_PLAN='multisession' & -p 1 ... DONE")
 
 message("- .onLoad() w/ future.plan='multisession' & -p 1 ...")
-options(future.plan='multisession', future.cmdargs=c("-p", "1"))
+options(mc.cores = NULL, future.plan='multisession', future.cmdargs=c("-p", "1"))
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
+print(nbrOfWorkers())
 stopifnot(inherits(strategy, "multisession"))
 plan("default")
 message("- .onLoad() w/ future.plan='multisession' & -p 1 ... DONE")
 
 message("- .onLoad() w/ future.plan='multisession' & -p 1 ...")
-options(future.plan=multisession, future.cmdargs=c("-p", "1"))
+options(mc.cores = NULL, future.plan=multisession, future.cmdargs=c("-p", "1"))
 .onLoad(pkgname, pkgname)
 strategy <- plan()
 print(strategy)
+print(nbrOfWorkers())
 stopifnot(inherits(strategy, "multisession"))
 plan("default")
 message("- .onLoad() w/ future.plan='multisession' & -p 1 ... DONE")
 
 
 message("- .onLoad() w/ future.availableCores.system=1L ...")
-options(future.availableCores.system=1L)
+options(mc.cores = NULL, future.availableCores.system=1L)
 .onLoad(pkgname, pkgname)
-options(future.availableCores.system=NULL)
+options(mc.cores = NULL, future.availableCores.system=NULL)
 message("- .onLoad() w/ future.availableCores.system=1L ... DONE")
 
 message("- .onLoad() w/ R_FUTURE_AVAILABLECORES_SYSTEM ...")
@@ -179,7 +193,7 @@ ncores <- getOption("future.availableCores.system")
 print(ncores)
 stopifnot(is.integer(ncores), ncores == 1L)
 Sys.unsetenv("R_FUTURE_AVAILABLECORES_SYSTEM")
-options(future.availableCores.system=NULL)
+options(mc.cores = NULL, future.availableCores.system=NULL)
 
 Sys.setenv(R_FUTURE_AVAILABLECORES_SYSTEM="NA")
 .onLoad(pkgname, pkgname)
@@ -187,7 +201,7 @@ ncores <- getOption("future.availableCores.system")
 print(ncores)
 stopifnot(is.integer(ncores), is.na(ncores))
 Sys.unsetenv("R_FUTURE_AVAILABLECORES_SYSTEM")
-options(future.availableCores.system=NULL)
+options(mc.cores = NULL, future.availableCores.system=NULL)
 
 Sys.setenv(R_FUTURE_AVAILABLECORES_SYSTEM="NA_real_")
 .onLoad(pkgname, pkgname)
@@ -195,14 +209,14 @@ ncores <- getOption("future.availableCores.system")
 print(ncores)
 stopifnot(is.integer(ncores), is.na(ncores))
 Sys.unsetenv("R_FUTURE_AVAILABLECORES_SYSTEM")
-options(future.availableCores.system=NULL)
+options(mc.cores = NULL, future.availableCores.system=NULL)
 
 message("- .onLoad() w/ R_FUTURE_AVAILABLECORES_SYSTEM ... DONE")
 
 
-options(future.plan=NULL, future.cmdargs=NULL, future.availableCores.system=1L)
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=NULL, future.availableCores.system=1L)
 
-options(future.plan=NULL, future.cmdargs=NULL, future.availableCores.system=NULL)
+options(mc.cores = NULL, future.plan=NULL, future.cmdargs=NULL, future.availableCores.system=NULL)
 
 message("*** .onLoad() ... DONE")
 
@@ -214,7 +228,7 @@ pkgname <- "future"
 message("- .onAttach() w/ option future.startup.loadScript ...")
 
 for (value in list(NULL, FALSE, TRUE)) {
-  options(future.startup.loadScript=value)
+  options(mc.cores = NULL, future.startup.loadScript=value)
   .onAttach(pkgname, pkgname)
 }
 
